Archive2/46/6cad69673c4d71/output
main.cpp: In function 'int main()':
main.cpp:26:8: error: 'getTime' was not declared in this scope
     if(getTime<Milliseconds>() == 5)
        ^
main.cpp:26:30: error: expected primary-expression before ')' token
     if(getTime<Milliseconds>() == 5)
                              ^
